--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-2022",
   "version": "0.1.0",
-  "homepage": "https//intuitiveharmony.github.io/portfolio-22"
+  "homepage": "https//intuitiveharmony.github.io/portfolio-2022",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
