--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-2022",
   "version": "0.1.0",
-  "homepage": "https://jasonhorst.net",
+  "homepage": "https://intuitiveharmony.github.io/portfolio-2022/",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
